<resources>

    <string name="app_name">Cipher tools</string>
    <string name="title_activity_main">Cipher tools</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_message">Cipher tools is collection of useful tools for encode and decode basic ciphers.\nPrimary purpose of this application is help to participants of cipher\'s games.\n\nAuthor: Ladislav Baco</string>
    <string name="app_theme">Application theme</string>

    <string-array name="tools">
        <item>Braille to Text</item>
        <item>Text to Braille</item>
        <item>Morse to Text</item>
        <item>Text to Morse</item>
        <item>Vigenere</item>
        <item>ROT13</item>
        <item>Atbash</item>
        <item>Semaphore</item>
        <item>Maritime signal flags</item>
        <item>Color mixing</item>
        <item>Alphabet</item>
        <item>Frequency analysis</item>
        <item>Calendar</item>
        <item>Streets</item>
        <!--
        <item>Roman numbers</item>
        <item>Mobile to Text</item>
        <item>Text to Mobile</item>
        <item>ASCII</item>
        -->
    </string-array>
    
    <string-array name="tool_icons">
        <item>@drawable/ic_list_braille2text</item>
        <item>@drawable/ic_list_text2braille</item>
        <item>@drawable/ic_list_morse2text</item>
        <item>@drawable/ic_list_text2morse</item>
        <item>@drawable/ic_list_vigenere</item>
        <item>@drawable/ic_list_rot13</item>
        <item>@drawable/ic_list_atbash</item>
        <item>@drawable/ic_list_semaphore</item>
        <item>@drawable/ic_list_flags</item>
        <item>@drawable/ic_list_colors</item>
        <item>@drawable/ic_list_alphabet</item>
        <item>@drawable/ic_list_frequency</item>
    	<item>@drawable/ic_list_calendar</item>
    	<item>@drawable/ic_list_map</item>
    </string-array>
    
    <string-array name="themes">
        <item>Dark</item>
        <item>Light</item>
        <item>Wallpaper</item>
        <item>Translucent</item>
    </string-array>

    <string name="ok">OK</string>
    <string name="search">Search</string>
    <string name="translate">Translate</string>
    <string name="backspace">Del</string>
    <string name="clear">Clear</string>
    <string name="text2braille">Text to Braille transform table</string>
    <string name="morse_dot">.</string>
    <string name="morse_dash">-</string>
    <string name="morse_separator">/</string>
    <string name="key">Key</string>
    <string name="message">Message</string>
    <string name="a0">A=0</string>
    <string name="a1">A=1</string>
    <string name="encode">Encode</string>
    <string name="decode">Decode</string>
    <string name="invalid_vigenere_key">Key must contain at least one letter.</string>
    <string name="aditive_color_mixing">Aditive color mixing</string>
    <string name="subtractive_color_mixing">Subtractive color mixing</string>
    <string name="letters">Letters</string>
    <string name="bigrams">Bigrams</string>
    <string name="trigrams">Trigrams</string>
    <string name="analyze">Analyze</string>

    <plurals name="invalid_frequency_input">
        <item quantity="one">Input must contain at least %1$d letter.</item>
        <item quantity="other">Input must contain at least %1$d letters.</item>
    </plurals>

    <string-array name="flags_meaning">
        <item>I have a diver down; keep well clear at slow speed.</item>
        <item>I am taking in, or discharging, or carrying dangerous goods.</item>
        <item>Affirmative.</item>
        <item>Keep clear of me; I am maneuvering with difficulty.</item>
        <item>I am altering my course to starboard.</item>
        <item>I am disabled; communicate with me.</item>
        <item>I require a pilot.</item>
        <item>I have a pilot on board.</item>
        <item>I am altering my course to port.</item>
        <item>I am on fire and have dangerous cargo on board: keep well clear of me.</item>
        <item>I wish to communicate with you.</item>
        <item>You should stop your vessel instantly.</item>
        <item>My vessel is stopped and making no way through the water.</item>
        <item>Negative.</item>
        <item>Man overboard.</item>
        <item>In harbour: All persons should report on board as the vessel is about to proceed to sea.
At sea: It may be used by fishing vessels to mean: "My nets have come fast upon an obstruction."</item>
        <item>My vessel is \'healthy\' and I request free pratique.</item>
        <item>The way is off my ship.</item>
        <item>I am operating astern propulsion.</item>
        <item>Keep clear of me; I am engaged in pair trawling.</item>
        <item>You are running into danger.</item>
        <item>I require assistance.</item>
        <item>I require medical assistance.</item>
        <item>Stop carrying out your intentions and watch for my signals.</item>
        <item>I am dragging my anchor.</item>
        <item>I require a tug.</item>
    </string-array>
    <string-array name="phonetic_alphabet">
        <item>Alfa</item>
        <item>Bravo</item>
        <item>Charlie</item>
        <item>Delta</item>
        <item>Echo</item>
        <item>Foxtrot</item>
        <item>Golf</item>
        <item>Hotel</item>
        <item>India</item>
        <item>Juliet</item>
        <item>Kilo</item>
        <item>Lima</item>
        <item>Mike</item>
        <item>November</item>
        <item>Oscar</item>
        <item>Papa</item>
        <item>Quebec</item>
        <item>Romeo</item>
        <item>Sierra</item>
        <item>Tango</item>
        <item>Uniform</item>
        <item>Victor</item>
        <item>Whiskey</item>
        <item>X-Ray</item>
        <item>Yankee</item>
        <item>Zulu</item>
    </string-array>

    <string name="semaphore_ready">Rest / Space</string>

    <string-array name="semaphore_description">
        <item>@string/semaphore_ready</item>
        <item>Numerals</item>
        <item>Error / Attention</item>
        <item>Cancel</item>
        <item>A / 1</item>
        <item>B / 2</item>
        <item>C / 3 / Acknowledge</item>
        <item>D / 4</item>
        <item>E / 5</item>
        <item>F / 6</item>
        <item>G / 7</item>
        <item>H / 8</item>
        <item>I / 9</item>
        <item>J / Letters</item>
        <item>K / 0 / Invitation to Transmit</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>

    <string name="cities_prompt">Choose a city</string>

    <string-array name="cities">
        <item>Bratislava</item>
        <item>Brno</item>
        <item>Košice</item>
        <item>Ostrava</item>
        <item>Praha</item>
        <item>Zlín</item>
    </string-array>

    <string name="calendar_prompt">Choose a calendar</string>

    <string-array name="calendars">
        <item>Czech</item>
        <item>Slovak</item>
    </string-array>

    <string name="file_error">Error while reading file %1$s.</string>
    <string name="pattern_syntax_error">Pattern syntax error:  %1$s.</string>

</resources>